fix some bug for dark mode toggle

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,6 +1,5 @@
 .header-nav-container {
   padding: 15px 30px 0px 30px;
-  color: white;
   background-color: var(--background-color);
 }
 
